TestCases/Errors/threaded_movement/observations/win_05_obs.spm
 obs   15-5   0.000106428267347808 
 obs   15-6   0.00111841210272899 
 obs   16-6   0.000861286312972315 
 obs   14-7   0.00326713217274766 
 obs   15-7   0.00260258517797756 
 obs   16-7   0.0020103054267618 
 obs   13-8   0.000417014178482068 
 obs   14-8   0.00310813102207544 
 obs   15-8   0.00259646285461226 
 obs   16-8   0.00286430361618332 
 obs   13-9   0.000417014178482068 
 obs   14-9   0.00201803517316815 
 obs   15-9   0.00325600325600326 
 obs   7-16   0.005 
 obs   9-17   0.0281802274715661 
 obs   7-18   0.000625 
 obs   8-18   0.0283013096505168 
 obs   9-18   0.0220872740160043 
 obs   11-18   0 
 obs   12-18   0 
 obs   8-19   0.016283467212788 
 obs   9-19   0.0248125701304606 
 obs   11-19   0 
 obs   12-19   0 
 obs   8-20   0.00825508720874352 
 obs   9-20   0.00537277780910278 
 obs   10-20   0.00388116358420731 
 obs   8-21   0.00333333333333333 
 error_value   15-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   13-8   0 
 error_value   14-8   0 
 error_value   15-8   0 
 error_value   16-8   0 
 error_value   13-9   0 
 error_value   14-9   0 
 error_value   15-9   0 
 error_value   7-16   0 
 error_value   9-17   0 
 error_value   7-18   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   11-18   0 
 error_value   12-18   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
 error_value   8-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
 error_value   8-21   0 
